# meeting-synthesis

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  DEV_CHECKLIST.md  GEMINI.md  KNOWLEDGE_BASE_TESTING_GUIDE.md  Makefile  PHASE_4_SUMMARY.md  PHASE_7_SUMMARY.md  README.md  docker-compose.dev.yml  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: auth_dependencies.py  dependencies.py  main.py
backend/app/apis/: project_api.py
backend/app/apis/v1/: endpoints_admin.py  endpoints_auth.py  endpoints_comments.py  endpoints_health.py  endpoints_knowledge_base.py  endpoints_meeting_history.py  endpoints_meetings.py  endpoints_project.py  endpoints_search.py  endpoints_users.py
backend/app/core/: config.py  elasticsearch_config.py  logging_config.py  permissions.py  redis_client.py
backend/app/crud/: crud_admin_dashboard.py  crud_comments.py  crud_knowledge_base.py  crud_meeting_history.py  crud_meetings.py  crud_projects.py  crud_users.py
backend/app/db/: mongodb_utils.py
backend/app/models/: action_items.py  ai_analysis.py  audio_file.py  comment.py  decision_made.py  global_config.py  key_topic.py  knowledge_base.py  meeting.py  meeting_history.py  mentioned_date.py  processing_config.py  processing_status.py  project.py  py_object_id.py  segment.py  transcription.py  transcrpion.py  user.py
backend/app/models/enums/: action_items_status.py  proccessing_mode.py  processing_mode.py  processing_stage.py
backend/app/schemas/: admin_dashboard_schema.py  comment_schema.py  meeting_schema.py  project_schema.py  user_schema.py
backend/app/services/: ai_analysis_service.py  audio_diarization_service.py  comment_service.py  diarization_service.py  elasticsearch_indexing_service.py  elasticsearch_mapping.py  elasticsearch_search_service.py  email_service.py  embedding_service.py  knowledge_base_rag_service.py  meeting_history_service.py  meeting_indexing_service.py  meeting_service.py  project_service.py  prompt_template.py  security.py  user_service.py  whisper_service.py
backend/app/services/analysis/: factory.py
backend/app/services/analysis/strategies/: base.py  local_llm.py  openai_llm.py
backend/app/worker/: celery_app.py  tasks.py
backend/logs/: app.log.2025-08-18  app.log.2025-10-23  app.log.2025-10-29  app.log.2025-10-30
backend/sample_data/: meeting_synthesis_db.meetings.json  meeting_synthesis_db.projects.json  meeting_synthesis_db.users.json
backend/scripts/: fix_audio_paths.py  init_elasticsearch.py  reindex_completed_meetings.py  seed_users.py  test_indexing_flow.py
backend/tests/: conftest.py  test_meeting_flow.py
backend/tests/integration/: conftest.py  test_chat_title_generation.py  test_knowledge_base_chat_flow.py
backend/tests/unit/apis/v1/: test_auth_endpoints.py  test_comments_endpoints.py  test_endpoints_health.py  test_endpoints_knowledge_base_admin.py  test_meeting_history_endpoints.py  test_meetings_endpoints.py  test_project_endpoints.py  test_search_endpoints.py  test_users_endpoints.py
backend/tests/unit/core/: test_elasticsearch_config.py  test_permissions.py
backend/tests/unit/crud/: test_crud_knowledge_base.py  test_crud_meetings.py  test_crud_projects.py  test_crud_users.py
backend/tests/unit/models/: test_knowledge_base.py
backend/tests/unit/schemas/: test_meeting_schema.py  test_preoject_schema.py  test_user_schema.py
backend/tests/unit/services/: test_ai_analysis_factory.py  test_ai_analysis_service.py  test_conversation_title_generation.py  test_elasticsearch_indexing_service.py  test_elasticsearch_search_service.py  test_email_service.py  test_embedding_service.py  test_knowledge_base_rag_service.py  test_meeting_indexing_service.py  test_meeting_service.py  test_project_service.py  test_security.py  test_user_service.py  test_whisper_service.py
backend/tests/unit/services/analysis/: __init__.py  test_local_llm_strategy.py  test_openai_strategy.py
backend/tests/unit/worker/: test_tasks.py
docs/: FUNKCJONALNOSCI.md  KNOWLEDGE_BASE_DIAGRAMS.md  KNOWLEDGE_BASE_IMPLEMENTATION_PLAN.md  KNOWLEDGE_BASE_SPEC.md  KNOWLEDGE_BASE_UI_EXAMPLES.md  README.md  README_KNOWLEDGE_BASE.md
frontend/: .dockerignore  .eslintrc.cjs  CLAUDE.md  Dockerfile  Dockerfile.dev  TESTS.md  index.html  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  AuthContext.tsx  WebSocketContext.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/__tests__/: AuthContext.test.tsx  WebSocketContext.test.tsx
frontend/src/components/: AddMeetingDialog.tsx  AddProjectButton.tsx  AddProjectDialog.tsx  AdminProtectedRoute.tsx  EditMeetingDialog.tsx  EditProjectDialog.tsx  EmptyState.tsx  ErrorBoundary.tsx  ErrorState.tsx  FeatureCard.tsx  FileUpload.tsx  MeetingCommentsSection.tsx  MeetingListItem.tsx  MeetingsToolbar.tsx  MobileNav.tsx  ProcessingStatusIndicator.tsx  ProjectCard.tsx  ProjectCardSkeleton.tsx  ProjectsToolbar.tsx  ProtectedRoute.tsx  ThemeToggle.tsx
frontend/src/contexts/: AuthContext.tsx  WebSocketContext.tsx
frontend/src/hooks/: useApi.ts  useManagers.ts  useMeetingPolling.ts
frontend/src/layouts/: AdminLayout.tsx  PublicLayout.tsx
frontend/src/lib/: form-utils.ts  utils.ts
frontend/src/pages/: CreateProjectPage.tsx  ForgotPasswordPage.tsx  HomePage.tsx  KnowledgeBasePage.tsx  LoginPage.tsx  ManageAccessPage.tsx  MeetingDetailsPage.tsx  MeetingsListPage.tsx  ProjectDetailsPage.tsx  ProjectListPage.tsx  RegisterPage.tsx  ResetPasswordPage.tsx  StyleGuidePage.tsx
frontend/src/services/: knowledge-base.ts  logging.ts  search.ts
mongo-init/: init-mongo.sh  meeting_synthesis_db.meetings.json  meeting_synthesis_db.projects.json  meeting_synthesis_db.users.json
notification_service/: Dockerfile  pyproject.toml
notification_service/app/: main.py  redis_listener.py
scripts/: reprocess_all_diarization.py  run.sh  run_backend.sh  run_celery_worker.sh  run_frontend.sh  run_mongo.sh  run_notification_service.sh  run_redis.sh  test_setup.sh  upload_all_meetings.py
(+108 files in other folders)
